fixed a minor contrast issue

--- a/docs/css/docs-theme.css
+++ b/docs/css/docs-theme.css
@@ -345,7 +345,7 @@ ul .dropdown-menu {
 }
 
 .frdr-jumbo-footer a:hover {
-  color: #2191C5;
+  color: white;
 }
 
 .frdr-jumbo-footer a {
